2007-02-19  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Removed a debug printf....

2007-02-16  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/ipsec_doi.c: Fixed a %zu in a printf. Reported by
	  Olivier Warin.
	
---------------------------------------------

	0.7.beta1 released

2007-02-15  Emmanuel Dreyfus  <manu@netbsd.org>
	* configure.ac: fix typo in SELinux option
	* src/racoon/security.c: missing file from Joy Latten

2007-02-15  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Fixed the way phase1/2 messages are
	  sent/resent, to avoid zombie handles and acces to freed memory.
	* src/racoon/isakmp_inf.c: Just expire a ph1 handle when receiving
	  a DELETE-SA instead of calling purge_remote(). Reported by
	  "Uncle Pedro" on Sourceforge's bugtracker.

2007-02-02  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/cfparse.y: Fixed a check of NAT-T support in libipsec. 

2007-02-01  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp_inf.c: When receiving an Isakmp DELETE_SA,
	  gets the cookie of the SA to be deleted from payload instead of
	  just deleting the Isakmp SA used to protect the informational.
	  Problem reported by "unclepedro" on Sourceforge's bugtracker.

2006-12-18  Yvan Vanhullebus  <vanhu@netasq.com>
	From Joy Latten <latten@austin.ibm.com>
	* src/racoon/crypto_openssl.c: fixed a memory leak

---------------------------------------------

	Branch for 0.7 created (ipsec-tools-0_7-branch)

2006-12-11 Emmanuel Dreyfus  <manu@netbsd.org>
	* src/libipsec/{Makefile.am|libpfkey.h|pfkey.c}
	  src/racoon/{backupsa.c|pfkey.c}: Bring back API and ABI backward
	  compatibility with previous libipsec interface change. Bump 
	  libipsec minor version. Remove ifdefs in struct pfkey_send_sa_args
	  to avoid ABI compatibility lossage.
	* src/libipsec/{libpfkey.h|pfkey.c} src/racoon/cfparse.y: add 
	  capability flags to detect missing optional feature in libipsec

2006-12-10 Emmanuel Dreyfus  <manu@netbsd.org>